# free-dog-cpp-sdk

./: .gitignore  CMakeLists.txt  LICENSE  README.md
example/: debug_live.cpp  debug_print_command.cpp  example_position_lowlevel.cpp
include/: common.h  complex.h  enums.h  lowCmd.h  lowState.h  unitreeConnection.h
pkg/: free_dog_sdk_cpp-config.cmake
src/: common.cpp  lowCmd.cpp  lowState.cpp  unitreeConnection.cpp
test/: low_test.cpp
